--- a/index.html
+++ b/index.html
@@ -8,5 +8,47 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
   </head>
   <body>
+
+    <!--Header principale-->
+    <header class="main-header">
+
+      <!--Header Nav-->
+      <div class="header-nav-container">
+
+        <div class="header-nav container clearfix">
+
+          <div class="header-nav-left">
+            <nav>
+              <ul class="menu-inline">
+                <li><a class="eng btn" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-angle-down"></i></a></li>
+                <li><a class="contact btn" href="#">Contact Us</a></li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="header-nav-right">
+            <nav>
+              <ul class="menu-inline">
+                <li><a class="search btn" href="#"><i class="fas fa-search"></i></a></li>
+                <li><a class="log btn btn-log" href="#">Log In</a></li>
+                <li><a class="get btn btn-o" href="#">GetHubspotFree</a></li>
+              </ul>
+            </nav>
+          </div>
+
+        </div>
+
+      </div>
+      <!--Fine Header Nav-->
+
+      <div class="header-container container">
+
+      </div>
+
+    </header>
+    <!--Fine Header principale-->
+
+
+
   </body>
 </html>
