--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 
         <div class="header-nav container clearfix">
 
-          <div class="header-nav-left">
+          <div class="header-nav-left color-hub float-left">
             <nav>
               <ul class="menu-inline">
-                <li><a class="eng btn" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-angle-down"></i></a></li>
-                <li><a class="contact btn" href="#">Contact Us</a></li>
+                <li><a class="eng btn float-left" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-angle-down"></i></a></li>
+                <li><a class="contact btn float-left" href="#">Contact Us</a></li>
               </ul>
             </nav>
           </div>
 
-          <div class="header-nav-right">
+          <div class="header-nav-right color-hub float-left">
             <nav>
               <ul class="menu-inline">
-                <li><a class="search btn" href="#"><i class="fas fa-search"></i></a></li>
-                <li><a class="log btn btn-log" href="#">Log In</a></li>
-                <li><a class="get btn btn-o" href="#">GetHubspotFree</a></li>
+                <li><a class="search btn float-left" href="#"><i class="fas fa-search"></i></a></li>
+                <li><a class="log btn float-left br5 pad10" href="#">Log In</a></li>
+                <li><a class="get btn float-left br5 btn-o pad10" href="#">GetHubspotFree</a></li>
               </ul>
             </nav>
           </div>
