text-align problem again

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <div class="header-nav-left color-hub float-left">
             <nav>
               <ul class="menu-inline">
-                <li><a class="eng btn float-left" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-angle-down"></i></a></li>
-                <li><a class="contact btn float-left" href="#">Contact Us</a></li>
+                <li><a class="eng float-left" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-angle-down"></i></a></li>
+                <li><a class="contact float-left" href="#">Contact Us</a></li>
               </ul>
             </nav>
           </div>
@@ -29,9 +29,9 @@
           <div class="header-nav-right color-hub float-left">
             <nav>
               <ul class="menu-inline">
-                <li><a class="search btn float-left" href="#"><i class="fas fa-search"></i></a></li>
-                <li><a class="log btn float-left br5 pad10" href="#">Log In</a></li>
-                <li><a class="get btn float-left br5 btn-o pad10" href="#">GetHubspotFree</a></li>
+                <li><a class="search float-left" href="#"><i class="fas fa-search"></i></a></li>
+                <li><a class="log float-left br5 pad10" href="#">Log In</a></li>
+                <li><a class="get float-left br5 btn-o pad10" href="#">GetHubspotFree</a></li>
               </ul>
             </nav>
           </div>
@@ -41,14 +41,34 @@
       </div>
       <!--Fine Header Nav-->
 
-      <div class="header-container container">
+      <!--Header Nav 2-->
+      <div class="header-nav2-container">
+
+        <div class="header-nav2 container clearfix">
+
+          <div class="header-logo">
+            <a class="float-left" href="#"><img src="img/logo.svg" alt="logo-hs"></a>
+          </div>
+
+          <div class="header-nav2-right color-hub float-left">
+            <nav>
+              <ul class="menu-inline">
+                <li class="float-left"><a class="pad10" href="#">Software <i class="fas fa-angle-down"></i></a></li>
+                <li class="float-left"><a class="pad10" href="#">Pricing</a></li>
+                <li class="float-left"><a class="pad10" href="#"></a>Resources <i class="fas fa-angle-down"></i></li>
+                <li class="float-left"><a class="pad10" href="#"></a>Partners <i class="fas fa-angle-down"></i></li>
+                <li class="float-left"><a class="pad10" href="#"></a>About <i class="fas fa-angle-down"></i></li>
+              </ul>
+            </nav>
+          </div>
+
+        </div>
 
       </div>
+      <!--Fine Header Nav 2-->
 
     </header>
     <!--Fine Header principale-->
-
-
 
   </body>
 </html>
