--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
               <ul class="menu-inline">
                 <li class="float-left"><a class="pad10" href="#">Software <i class="fas fa-angle-down"></i></a></li>
                 <li class="float-left"><a class="pad10" href="#">Pricing</a></li>
-                <li class="float-left"><a class="pad10" href="#"></a>Resources <i class="fas fa-angle-down"></i></li>
-                <li class="float-left"><a class="pad10" href="#"></a>Partners <i class="fas fa-angle-down"></i></li>
-                <li class="float-left"><a class="pad10" href="#"></a>About <i class="fas fa-angle-down"></i></li>
+                <li class="float-left"><a class="pad10" href="#">Resources <i class="fas fa-angle-down"></i></a></li>
+                <li class="float-left"><a class="pad10" href="#">Partners <i class="fas fa-angle-down"></i></a></li>
+                <li class="float-left"><a class="pad10" href="#">About <i class="fas fa-angle-down"></i></a></li>
               </ul>
             </nav>
           </div>
