--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header class="main-header">
 
       <!--Header Nav-->
-      <div class="header-nav-container">
+      <div class="header-nav-container color-hub">
 
         <div class="header-nav container clearfix">
 
-          <div class="header-nav-left color-hub float-left">
+          <div class="header-nav-left color-hub float-left w-50">
             <nav>
               <ul class="menu-inline">
                 <li><a class="eng float-left" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-angle-down"></i></a></li>
@@ -26,7 +26,7 @@
             </nav>
           </div>
 
-          <div class="header-nav-right color-hub float-left">
+          <div class="header-nav-right color-hub float-left w-50">
             <nav>
               <ul class="menu-inline">
                 <li><a class="search float-left" href="#"><i class="fas fa-search"></i></a></li>
@@ -46,11 +46,11 @@
 
         <div class="header-nav2 container clearfix">
 
-          <div class="header-logo">
+          <div class="header-logo w-50">
             <a class="float-left" href="#"><img src="img/logo.svg" alt="logo-hs"></a>
           </div>
 
-          <div class="header-nav2-right color-hub float-left">
+          <div class="header-nav2-right color-hub float-left w-50">
             <nav>
               <ul class="menu-inline">
                 <li class="float-left"><a class="pad10" href="#">Software <i class="fas fa-angle-down"></i></a></li>
@@ -66,6 +66,23 @@
 
       </div>
       <!--Fine Header Nav 2-->
+
+      <!--Jumbotron-->
+
+      <div class="jumbotron-container container">
+
+        <div class="jumbotron">
+          <div class="jumbotron-content w-50 float-left">
+            <h1 class="jumbo-margin float-left">There's a better way to grow.</h1>
+            <p class="jumbo-margin float-left">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customer".</p>
+            <a class="btn-o-large br5 jumbo-margin float-left" href="#">GetHubspotFree</a>
+            <span class="jumbo-margin float-left">Get started with FREE tools, and upgrade as you grow.</span>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="strip"></div>
 
     </header>
     <!--Fine Header principale-->
