--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
   <body>
 
     <!--Header principale-->
-    <header class="main-header">
+    <header class="main-header vw">
 
       <!--Header Nav-->
-      <div class="header-nav-container color-hub">
+      <div class="header-nav-container vw">
 
         <div class="header-nav container clearfix">
 
-          <div class="header-nav-left color-hub float-left w-50">
+          <div class="header-nav-left float-left i-b w-50">
             <nav>
               <ul class="menu-inline">
-                <li><a class="eng float-left" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-angle-down"></i></a></li>
-                <li><a class="contact float-left" href="#">Contact Us</a></li>
+                <li><a class="eng float-left i-b" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-angle-down"></i></a></li>
+                <li><a class="contact float-left i-b" href="#">Contact Us</a></li>
               </ul>
             </nav>
           </div>
 
-          <div class="header-nav-right color-hub float-left w-50">
+          <div class="header-nav-right float-left i-b w-50">
             <nav>
               <ul class="menu-inline">
-                <li><a class="search float-left" href="#"><i class="fas fa-search"></i></a></li>
-                <li><a class="log float-left br5 pad10" href="#">Log In</a></li>
-                <li><a class="get float-left br5 btn-o pad10" href="#">GetHubspotFree</a></li>
+                <li><a class="search float-left i-b" href="#"><i class="fas fa-search"></i></a></li>
+                <li><a class="log float-left i-b br5 pad10" href="#">Log In</a></li>
+                <li><a class="get float-left i-b br5 btn-o pad10" href="#">GetHubspotFree</a></li>
               </ul>
             </nav>
           </div>
@@ -42,22 +42,22 @@
       <!--Fine Header Nav-->
 
       <!--Header Nav 2-->
-      <div class="header-nav2-container">
+      <div class="header-nav2-container vw">
 
         <div class="header-nav2 container clearfix">
 
           <div class="header-logo w-50">
-            <a class="float-left" href="#"><img src="img/logo.svg" alt="logo-hs"></a>
+            <a class="float-left i-b" href="#"><img src="img/logo.svg" alt="logo-hs"></a>
           </div>
 
-          <div class="header-nav2-right color-hub float-left w-50">
+          <div class="header-nav2-right float-left i-b w-50">
             <nav>
               <ul class="menu-inline">
-                <li class="float-left"><a class="pad10" href="#">Software <i class="fas fa-angle-down"></i></a></li>
-                <li class="float-left"><a class="pad10" href="#">Pricing</a></li>
-                <li class="float-left"><a class="pad10" href="#">Resources <i class="fas fa-angle-down"></i></a></li>
-                <li class="float-left"><a class="pad10" href="#">Partners <i class="fas fa-angle-down"></i></a></li>
-                <li class="float-left"><a class="pad10" href="#">About <i class="fas fa-angle-down"></i></a></li>
+                <li class="float-left i-b"><a class="pad10" href="#">Software <i class="fas fa-angle-down"></i></a></li>
+                <li class="float-left i-b"><a class="pad10" href="#">Pricing</a></li>
+                <li class="float-left i-b"><a class="pad10" href="#">Resources <i class="fas fa-angle-down"></i></a></li>
+                <li class="float-left i-b"><a class="pad10" href="#">Partners <i class="fas fa-angle-down"></i></a></li>
+                <li class="float-left i-b"><a class="pad10" href="#">About <i class="fas fa-angle-down"></i></a></li
               </ul>
             </nav>
           </div>
@@ -72,11 +72,11 @@
       <div class="jumbotron-container container">
 
         <div class="jumbotron">
-          <div class="jumbotron-content w-50 float-left">
-            <h1 class="jumbo-margin float-left">There's a better way to grow.</h1>
-            <p class="jumbo-margin float-left">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customer".</p>
-            <a class="btn-o-large br5 jumbo-margin float-left" href="#">GetHubspotFree</a>
-            <span class="jumbo-margin float-left">Get started with FREE tools, and upgrade as you grow.</span>
+          <div class="jumbotron-content w-50 float-left i-b">
+            <h1 class="jumbo-margin i-b">There's a better way to grow.</h1>
+            <p class="jumbo-margin i-b">Marketing, sales, and service software that helps your business grow without compromise. Because "good for the business" should also mean "good for the customer".</p>
+            <a class="get-btn btn-o-large br5 jumbo-margin" href="#">GetHubspotFree</a>
+            <div class="jumbo-get jumbo-margin">Get started with FREE tools, and upgrade as you grow.</div>
           </div>
         </div>
 
@@ -86,6 +86,12 @@
 
     </header>
     <!--Fine Header principale-->
+
+    <!--Main Content-->
+    <main class="wv main-color">
+
+    </main>
+    <!--Fine Main Content-->
 
   </body>
 </html>
