finished main-content1

--- a/index.html
+++ b/index.html
@@ -90,6 +90,32 @@
     <!--Main Content-->
     <main class="wv main-color">
 
+      <!--Main Content 1-->
+      <div class="main-content1-container container clearfix main-color">
+        <div class="main-content1 clearfix">
+          <div class="main1-logo jumbo-margin">
+            <img src="img/Integrations_Illustration.webp" alt="cube">
+          </div>
+          <h1 class="jumbo-margin">Powerful Alone. Better Together.</h1>
+          <p class="jumbo-margin">HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better when used together.</p>
+        </div>
+      </div>
+      <!--Fine Main Content 1-->
+
+      <!--Main Content 2-->
+      <div class="main-content2-container container clearfix main-color">
+        <div class="main-content2 clearfix">
+        </div>
+      </div>
+      <!--Fine Main Content 2-->
+
+      <!--Main Content 3-->
+      <div class="main-content3-container container clearfix main-color">
+        <div class="main-content3 clearfix">
+        </div>
+      </div>
+      <!--Fine Main Content 3-->
+
     </main>
     <!--Fine Main Content-->
 
