finished main-content2

--- a/index.html
+++ b/index.html
@@ -104,7 +104,23 @@
 
       <!--Main Content 2-->
       <div class="main-content2-container container clearfix main-color">
-        <div class="main-content2 clearfix">
+        <div class="main-content2 clearfix box-shadow br2">
+          <div class="logo-text float-left">
+            <div class="main-logo">
+              <img src="img/CRM-Illustration.svg" alt="crm">
+            </div>
+            <div class="main-logo-btn">
+              <a class="btn-o-large br5 i-b" href="#">Learn More</a>
+            </div>
+          </div>
+          <div class="free-hub">
+            <h2 class="jumbo-margin">Free HubSpot CRM</h2>
+            <p class="jumbo-margin">Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+            <p class="bold jumbo-margin">POPOLAR FEATURE</p>
+            <p class="main2-p i-b"><i class="fas fa-check-circle check"></i> Contact Insight</p>
+            <p class="main2-p i-b"><i class="fas fa-check-circle check"></i> Deals</p>
+            <p class="main2-p i-b"><i class="fas fa-check-circle check"></i> Task</p>
+          </div>
         </div>
       </div>
       <!--Fine Main Content 2-->
