finished main-content3

--- a/index.html
+++ b/index.html
@@ -128,6 +128,67 @@
       <!--Main Content 3-->
       <div class="main-content3-container container clearfix main-color">
         <div class="main-content3 clearfix">
+
+          <div class="main-content3-content content3-margin float-left box-shadow">
+            <div class="main-logo">
+              <img src="img/Marketing-Hub-Free.svg" alt="crm">
+            </div>
+            <h2 class="jumbo-margin">Marketing Hub</h2>
+            <p class="jumbo-margin">Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+            <div class="hr-pad">
+              <hr>
+            </div>
+            <p class="bold jumbo-margin">POPOLAR FEATURE</p>
+            <ul class="content3-ul">
+              <li><i class="fas fa-check-circle check"></i> Lead Generation</li>
+              <li><i class="fas fa-check-circle check"></i> Marketing Automation</li>
+              <li><i class="fas fa-check-circle check"></i> Analytics</li>
+            </ul>
+            <div class="main-logo-btn">
+              <a class="btn-o-large br5 i-b" href="#">Learn More</a>
+            </div>
+          </div>
+
+          <div class="main-content3-content content3-margin float-left box-shadow">
+            <div class="main-logo">
+              <img src="img/Sales-Professional-Illustration.svg" alt="crm">
+            </div>
+            <h2 class="jumbo-margin">Sales Hub</h2>
+            <p class="jumbo-margin">Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+            <div class="hr-pad">
+              <hr>
+            </div>
+            <p class="bold jumbo-margin">POPOLAR FEATURE</p>
+            <ul class="content3-ul">
+              <li><i class="fas fa-check-circle check"></i> Email Tracking</li>
+              <li><i class="fas fa-check-circle check"></i> Meeting Scheduling</li>
+              <li><i class="fas fa-check-circle check"></i> Email Automation</li>
+            </ul>
+            <div class="main-logo-btn">
+              <a class="btn-o-large br5 i-b" href="#">Learn More</a>
+            </div>
+          </div>
+
+          <div class="main-content3-content float-left box-shadow">
+            <div class="main-logo">
+              <img src="img/Service-Hub-Illustration.svg" alt="crm">
+            </div>
+            <h2 class="jumbo-margin">Service Hub</h2>
+            <p class="jumbo-margin">Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+            <div class="hr-pad">
+              <hr>
+            </div>
+            <p class="bold jumbo-margin">POPOLAR FEATURE</p>
+            <ul class="content3-ul">
+              <li><i class="fas fa-check-circle check"></i> Tickets</li>
+              <li><i class="fas fa-check-circle check"></i> Customer Feedback</li>
+              <li><i class="fas fa-check-circle check"></i> Knowledge Base</li>
+            </ul>
+            <div class="main-logo-btn">
+              <a class="btn-o-large br5 i-b" href="#">Learn More</a>
+            </div>
+          </div>
+
         </div>
       </div>
       <!--Fine Main Content 3-->
