finished main-content4

--- a/index.html
+++ b/index.html
@@ -193,6 +193,86 @@
       </div>
       <!--Fine Main Content 3-->
 
+      <!--Main Content 4-->
+      <div class="main-content4-container clearfix main-content4-color">
+        <div class="main-content4 container clearfix main-content4-color">
+
+          <div class="main-content4-1 f-white">
+            <h1>Learn and grow with award-winning support and thriving community behind you.</h1>
+            <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousand of marketing and sales pros just like you.</p>
+          </div>
+
+          <div class="main-content4-2 f-white">
+            <div class="main-content4-2-top height-170 pad-top">
+              <div class="main-content4-2-top-content w-25 i-b height-170 b-right float-left">
+                <div class="small-logo content-margin">
+                  <img src="img/homepage_community_globe.svg" alt="small">
+                </div>
+                <h1 class="content-margin">150 +</h1>
+                <p>HubSpot user groups</p>
+              </div>
+              <div class="main-content4-2-top-content w-25 i-b height-170 b-right float-left">
+                <div class="small-logo content-margin">
+                  <img src="img/homepage_community_globe.svg" alt="small">
+                </div>
+                <h1 class="content-margin">150 +</h1>
+                <p>HubSpot user groups</p>
+              </div>
+              <div class="main-content4-2-top-content w-25 i-b height-170 b-right float-left">
+                <div class="small-logo content-margin">
+                  <img src="img/homepage_community_globe.svg" alt="small">
+                </div>
+                <h1 class="content-margin">150 +</h1>
+                <p>HubSpot user groups</p>
+              </div>
+              <div class="main-content4-2-top-content w-25 i-b height-170 float-left">
+                <div class="small-logo content-margin">
+                  <img src="img/homepage_community_globe.svg" alt="small">
+                </div>
+                <h1 class="content-margin">150 +</h1>
+                <p>HubSpot user groups</p>
+              </div>
+            </div>
+
+            <div class="main-content4-2-bottom height-120 pad-bott">
+              <div class="main-content4-2-top-content w-25 i-b height-120 b-right float-left">
+                <div class="small-logo content-margin">
+                  <img src="img/homepage_community_globe.svg" alt="small">
+                </div>
+                <h1 class="content-margin">150 +</h1>
+                <p>HubSpot user groups</p>
+              </div>
+              <div class="main-content4-2-top-content w-25 i-b height-120 b-right float-left">
+                <div class="small-logo content-margin">
+                  <img src="img/homepage_community_globe.svg" alt="small">
+                </div>
+                <h1 class="content-margin">150 +</h1>
+                <p>HubSpot user groups</p>
+              </div>
+              <div class="main-content4-2-top-content w-25 i-b height-120 b-right float-left">
+                <div class="small-logo content-margin">
+                  <img src="img/homepage_community_globe.svg" alt="small">
+                </div>
+                <h1 class="content-margin">150 +</h1>
+                <p>HubSpot user groups</p>
+              </div>
+              <div class="main-content4-2-top-content w-25 i-b height-120 float-left">
+                <div class="small-logo content-margin">
+                  <img src="img/homepage_community_globe.svg" alt="small">
+                </div>
+                <h1 class="content-margin">150 +</h1>
+                <p>HubSpot user groups</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <!--Fine Main Content 4-->
+
+      <!--Main Content 5-->
+
+      <!--Fine Main Content 5-->
     </main>
     <!--Fine Main Content-->
 
