main-content5 in progress

--- a/index.html
+++ b/index.html
@@ -271,6 +271,31 @@
       <!--Fine Main Content 4-->
 
       <!--Main Content 5-->
+      <div class="main-content5-container clearfix">
+        <div class="main-content5 container clearfix">
+
+          <div class="main-content5-1 container clearfix">
+            <div class="n-customer float-left">
+              <div class="customers">
+                <h1 class="pad-bott">64,500</h1>
+                <p>customers in over <span class="bold">100</span> countries growing their businesses with HubSpot</p>
+              </div>
+            </div>
+            <div class="brand float-left">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+          </div>
+
+          <div class="main-content5-2 container clearfix">
+            <div class="start">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="girl">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!--Fine Main Content 5-->
     </main>
