main-content4 fixed

--- a/index.html
+++ b/index.html
@@ -206,62 +206,62 @@
             <div class="main-content4-2-top height-170 pad-top">
               <div class="main-content4-2-top-content w-25 i-b height-170 b-right float-left">
                 <div class="small-logo content-margin">
-                  <img src="img/homepage_community_globe.svg" alt="small">
+                  <img src="img/homepage_community_agency.svg" alt="small">
                 </div>
                 <h1 class="content-margin">150 +</h1>
                 <p>HubSpot user groups</p>
               </div>
               <div class="main-content4-2-top-content w-25 i-b height-170 b-right float-left">
                 <div class="small-logo content-margin">
-                  <img src="img/homepage_community_globe.svg" alt="small">
+                  <img src="img/homepage_community_blog.svg" alt="small">
                 </div>
-                <h1 class="content-margin">150 +</h1>
-                <p>HubSpot user groups</p>
+                <h1 class="content-margin">4,5M +</h1>
+                <p>monthly visits</p>
               </div>
               <div class="main-content4-2-top-content w-25 i-b height-170 b-right float-left">
                 <div class="small-logo content-margin">
-                  <img src="img/homepage_community_globe.svg" alt="small">
+                  <img src="img/homepage_community_academy.svg" alt="small">
                 </div>
-                <h1 class="content-margin">150 +</h1>
-                <p>HubSpot user groups</p>
+                <h1 class="content-margin">155K +</h1>
+                <p>certified professionals</p>
               </div>
               <div class="main-content4-2-top-content w-25 i-b height-170 float-left">
                 <div class="small-logo content-margin">
-                  <img src="img/homepage_community_globe.svg" alt="small">
+                  <img src="img/homepage_community_inbound.svg" alt="small">
                 </div>
-                <h1 class="content-margin">150 +</h1>
-                <p>HubSpot user groups</p>
+                <h1 class="content-margin">21K +</h1>
+                <p>registered attendees</p>
               </div>
             </div>
 
             <div class="main-content4-2-bottom height-120 pad-bott">
               <div class="main-content4-2-top-content w-25 i-b height-120 b-right float-left">
                 <div class="small-logo content-margin">
-                  <img src="img/homepage_community_globe.svg" alt="small">
+                  <img src="img/homepage_community_connect.svg" alt="small">
                 </div>
-                <h1 class="content-margin">150 +</h1>
-                <p>HubSpot user groups</p>
+                <h1 class="content-margin">200 +</h1>
+                <p>integrations</p>
               </div>
               <div class="main-content4-2-top-content w-25 i-b height-120 b-right float-left">
                 <div class="small-logo content-margin">
                   <img src="img/homepage_community_globe.svg" alt="small">
                 </div>
-                <h1 class="content-margin">150 +</h1>
-                <p>HubSpot user groups</p>
+                <h1 class="content-margin">6 +</h1>
+                <p>languages</p>
               </div>
               <div class="main-content4-2-top-content w-25 i-b height-120 b-right float-left">
                 <div class="small-logo content-margin">
-                  <img src="img/homepage_community_globe.svg" alt="small">
+                  <img src="img/homepage_community_followers.svg" alt="small">
                 </div>
-                <h1 class="content-margin">150 +</h1>
-                <p>HubSpot user groups</p>
+                <h1 class="content-margin">2,6M +</h1>
+                <p>social followers</p>
               </div>
               <div class="main-content4-2-top-content w-25 i-b height-120 float-left">
                 <div class="small-logo content-margin">
-                  <img src="img/homepage_community_globe.svg" alt="small">
+                  <img src="img/growthhub-white-small.svg" alt="small">
                 </div>
-                <h1 class="content-margin">150 +</h1>
-                <p>HubSpot user groups</p>
+                <h1 class="content-margin">5K +</h1>
+                <p>profiles and counting</p>
               </div>
             </div>
           </div>
