--- a/index.html
+++ b/index.html
@@ -275,15 +275,50 @@
         <div class="main-content5 container clearfix">
 
           <div class="main-content5-1 container clearfix">
+
             <div class="n-customer float-left">
               <div class="customers">
                 <h1 class="pad-bott">64,500</h1>
                 <p>customers in over <span class="bold">100</span> countries growing their businesses with HubSpot</p>
               </div>
             </div>
-            <div class="brand float-left">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+            <div class="brands float-left">
+              <div class="brands-container">
+
+                <div class="brands-strip1">
+                  <div class="brand-small float-left">
+                    <img src="img/Atlassian-horizontal-blue.webp" alt="brand">
+                  </div>
+                  <div class="brand-small float-left">
+                    <img src="img/doordash_owler.webp" alt="brand">
+                  </div>
+                  <div class="brand float-left">
+                    <img src="img/g2crowd.webp" alt="brand">
+                  </div>
+                  <div class="brand float-left">
+                    <img src="img/purple-logo.webp" alt="brand">
+                  </div>
+                </div>
+
+                <div class="brands-strip2">
+                  <div class="brand float-left">
+                    <img src="img/Subaru_Logo.webp" alt="brand">
+                  </div>
+                  <div class="brand-wistia float-left">
+                    <img src="img/Wistia_logo.webp" alt="brand">
+                  </div>
+                  <div class="brand float-left">
+                    <img src="img/Classpass-logo.webp" alt="brand">
+                  </div>
+                  <div class="brand float-left">
+                    <img src="img/VMware_logo.webp" alt="brand">
+                  </div>
+                </div>
+
+              </div>
             </div>
+
           </div>
 
           <div class="main-content5-2 container clearfix">
