--- a/index.html
+++ b/index.html
@@ -322,11 +322,14 @@
           </div>
 
           <div class="main-content5-2 container clearfix">
-            <div class="start">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div class="start float-left">
+              <h1 class="jumbo-margin i-b">Start Growing With HubSpot Today</h1>
+              <p class="jumbo-margin i-b">With tools to make every path of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+              <a class="get-btn btn-o-large br5 jumbo-margin" href="#">GetHubspotFree</a>
+              <div class="jumbo-get jumbo-margin">Get started with FREE tools, or get more with our premium software.</div>
             </div>
-            <div class="girl">
-              <img src="" alt="">
+            <div class="woman w-50 float-left">
+              <img src="img/woman.webp" alt="woman">
             </div>
           </div>
         </div>
