first step footer ok

--- a/index.html
+++ b/index.html
@@ -339,5 +339,82 @@
     </main>
     <!--Fine Main Content-->
 
+    <!--Footer Content-->
+    <footer>
+
+      <!--Footer Content 1-->
+      <div class="footer-content-container1 container clearfix">
+        <div class="footer-list w-25 float-left">
+          <ul>
+            <li class="title-list bold"><a href="#">Increase Your Traffic</a></li>
+            <br>
+            <li><a href="#">Ad Software</a></li>
+            <li><a href="#">Blog Software</a></li>
+            <li><a href="#">SEO Software</a></li>
+            <li><a href="#">Social Media Software</a></li>
+            <li><a href="#">Content Management System</a></li>
+          </ul>
+        </div>
+        <div class="footer-list w-25 float-left">
+          <ul>
+            <li class="title-list bold"><a href="#">Connect With Leads</a></li>
+            <br>
+            <li><a href="#">Find New Prospects</a></li>
+            <li><a href="#">Email Tracking</a></li>
+            <li><a href="#">Sales Email Templates</a></li>
+            <li><a href="#">Click to Call Your Leads</a></li>
+            <li><a href="#">Email Marketing</a></li>
+          </ul>
+        </div>
+        <div class="footer-list w-25 float-left">
+          <ul>
+            <li class="title-list bold"><a href="#">Close and Manage Leads</a></li>
+            <br>
+            <li><a href="#">Document Tracking Tool</a></li>
+            <li><a href="#">Meeting Schedule Tool</a></li>
+            <li><a href="#">Sales Automation Tool</a></li>
+            <li><a href="#">Lead Management Tool</a></li>
+            <li><a href="#">Pipeline Management Tool</a></li>
+          </ul>
+        </div>
+        <div class="footer-list w-25 float-left">
+          <ul>
+            <li class="title-list bold"><a href="#">Support and Tools</a></li>
+            <br>
+            <li><a href="#">HubSpot Partners</a></li>
+            <li><a href="#">Join a Local User Group</a></li>
+            <li><a href="#">Get a Free Website Report</a></li>
+            <li><a href="#">HubSpot Templates</a></li>
+            <li><a href="#">Free Tools & Generators</a></li>
+            <br>
+            <li><a class="btn-grey i-b br5" href="#">Contact HubSpot Support</a></li>
+          </ul>
+          <br>
+          <ul>
+            <li class="social-list i-b"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="social-list i-b"><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li class="social-list i-b"><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li class="social-list i-b"><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li class="i-b"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <!--Footer Content 1-->
+
+      <!--Footer Content 2-->
+      <div class="footer-content-container2 container clearfix">
+
+      </div>
+      <!--Fine Footer Content 2-->
+
+      <!--Footer Content 3-->
+      <div class="footer-content-container3 container clearfix">
+
+      </div>
+      <!--Fine Footer Content 3-->
+      
+    </footer>
+    <!--Fine Footer Content-->
+
   </body>
 </html>
