--- a/index.html
+++ b/index.html
@@ -403,16 +403,32 @@
 
       <!--Footer Content 2-->
       <div class="footer-content-container2 container clearfix">
-
+        <ul>
+          <li class="i-b"><a href="#">English</a></li>
+          <li class="i-b"><a href="#">Deutsch</a></li>
+          <li class="i-b"><a href="#">日本の</a></li>
+          <li class="i-b"><a href="#">Español</a></li>
+          <li class="i-b"><a href="#">Português</a></li>
+          <li class="i-b"><a href="#">Français</a></li>
+        </ul>
       </div>
       <!--Fine Footer Content 2-->
 
       <!--Footer Content 3-->
       <div class="footer-content-container3 container clearfix">
-
+        <div class="logo-final float-left">
+          <img src="img/hubspot-logo-footer.svg" alt="logo-footer">
+          <p>Copyright <i class="far fa-copyright"></i> 2019 HubSpot, Inc.</p>
+        </div>
+        <div class="link-final">
+          <ul>
+            <li class="legal i-b bold"><a href="#">Legal Stuff</a></li>
+            <li class="i-b bold"><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
       </div>
       <!--Fine Footer Content 3-->
-      
+
     </footer>
     <!--Fine Footer Content-->
 
