--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <!--Fine Main Content 3-->
 
       <!--Main Content 4-->
-      <div class="main-content4-container clearfix main-content4-color">
+      <div class="main-content4-container vw clearfix main-content4-color">
         <div class="main-content4 container clearfix main-content4-color">
 
           <div class="main-content4-1 f-white">
@@ -340,7 +340,7 @@
     <!--Fine Main Content-->
 
     <!--Footer Content-->
-    <footer>
+    <footer class="vw">
 
       <!--Footer Content 1-->
       <div class="footer-content-container1 container clearfix">
